--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header {
 .titulo {
   display: flex;
   justify-content: space-between;
-  font-size: 1rem;
+  font-size: 16px;
   align-items: center;
 }
 
@@ -60,7 +60,7 @@ label {
 
 .tituloTabela {
   text-align: center;
-  font-size: 1rem;
+  font-size: 16px;
 }
 
 .tituloTabela hr {
@@ -88,11 +88,12 @@ hr {
 }
 
 th {
-  font-size: 0.5rem;
+  font-size: 8px;
 }
 
 td {
-  padding: 0.35px 2px;
+  padding: 0.82px  2px !important;
+   
 }
 
 tr:nth-child(even) {
@@ -102,7 +103,8 @@ tr:nth-child(even) {
 tr {
   padding: 0 10px;
   height: 6px !important;
-  font-size: 12px !important;
+  font-size: 11px !important;
+  
 }
 
 .infoTable {
